# sssl-registry-tg-bot

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  images_handler.rs  main.rs
