[package]
name = "sssl-registry-tg-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.47.0"
teloxide = { version = "0.12.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.30", features = ["rt-multi-thread", "macros"] }
